--- a/azulitos.html
+++ b/azulitos.html
@@ -1,66 +1,66 @@
 <!doctype html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>B&P | Azulitos</title>
+  <title>B&P | Blue Drink</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&family=Fredoka:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body class="detail azulitos">
   <main class="detail-wrap">
-    <a class="back-link" href="menu.html">⟵ Volver al menú</a>
+    <a class="back-link" href="menu.html">⟵ Back to menu</a>
 
     <header class="detail-head">
-      <h1 class="detail-title">Azulitos</h1>
-      <span class="detail-badge">Bebida fría</span>
+      <h1 class="detail-title">Blue Drink</h1>
+      <span class="detail-badge">Cold beverage</span>
     </header>
 
     <section class="detail-grid">
-      <!-- Imagen grande + logo sobrepuesto -->
+      <!-- Large image + overlay logo -->
       <figure class="detail-figure">
-        <img src="assets/azulitos.png" alt="Azulitos" class="detail-img" />
+        <img src="assets/azulitos.png" alt="Blue Drink" class="detail-img" />
         <img src="assets/logo-azulito.png" alt="" class="detail-sticker" aria-hidden="true" />
       </figure>
 
-      <!-- Información -->
+      <!-- Information -->
       <div class="detail-info">
         <p class="detail-desc">
-          Refrescante con toque cítrico. Perfecta para días calurosos.
+          Refreshing with a citrus touch. Perfect for hot days.
         </p>
 
         <div class="info-card">
-          <h3>Precios</h3>
+          <h3>Prices</h3>
           <div class="price-grid">
-            <div class="p-row"><span>Normal</span><strong>Q12.00</strong></div>
-            <div class="p-row"><span>Con gomitas</span><strong>Q15.00</strong></div>
+            <div class="p-row"><span>Regular</span><strong>Q12.00</strong></div>
+            <div class="p-row"><span>With gummies</span><strong>Q15.00</strong></div>
           </div>
         </div>
 
         <div class="info-card">
-          <h3>Ingredientes</h3>
+          <h3>Ingredients</h3>
           <ul class="bullet">
-            <li>Hielo picado</li>
-            <li>Jarabe azul</li>
-            <li>Jugo de limón</li>
-            <li>Refresco de limón</li>
-            <li>Rodaja de limón</li>
+            <li>Crushed ice</li>
+            <li>Blue syrup</li>
+            <li>Lemon juice</li>
+            <li>Lemon soda</li>
+            <li>Lemon slice</li>
           </ul>
         </div>
 
         <div class="info-card">
-          <h3>Receta</h3>
+          <h3>Recipe</h3>
           <ol class="steps">
-            <li>Llena el vaso con hielo hasta 3/4.</li>
-            <li>Agrega jarabe azul (aprox. 30 ml).</li>
-            <li>Exprime 10–15 ml de limón.</li>
-            <li>Rellena con refresco de limón y mezcla suavemente.</li>
-            <li>Decora con rodaja de limón. Opcional: añade gomitas.</li>
+            <li>Fill the glass with ice up to 3/4.</li>
+            <li>Add blue syrup (approx. 30 ml).</li>
+            <li>Squeeze 10–15 ml of lemon juice.</li>
+            <li>Fill with lemon soda and stir gently.</li>
+            <li>Garnish with a lemon slice. Optional: add gummies.</li>
           </ol>
         </div>
 
         <div class="cta-actions">
-          <a class="btn neon" href="menu.html">Elegir otra bebida</a>
+          <a class="btn neon" href="menu.html">Choose another drink</a>
         </div>
       </div>
     </section>
