--- a/cafe_frio.html
+++ b/cafe_frio.html
@@ -1,66 +1,66 @@
 <!doctype html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>B&P | Café frío</title>
+  <title>B&P | Iced Coffee</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&family=Fredoka:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body class="detail cafe_frio">
   <main class="detail-wrap">
-    <a class="back-link" href="menu.html">⟵ Volver al menú</a>
+    <a class="back-link" href="menu.html">⟵ Back to menu</a>
 
     <header class="detail-head">
-      <h1 class="detail-title">Café frío</h1>
-      <span class="detail-badge">Bebida fría</span>
+      <h1 class="detail-title">Iced Coffee</h1>
+      <span class="detail-badge">Cold beverage</span>
     </header>
 
     <section class="detail-grid">
-      <!-- Imagen grande + logo sobrepuesto -->
+      <!-- Large image + overlay logo -->
       <figure class="detail-figure">
-        <img src="assets/cafe-frio.png" alt="Café frío" class="detail-img" />
+        <img src="assets/cafe-frio.png" alt="Iced Coffee" class="detail-img" />
         <img src="assets/logo-cafe.png" alt="" class="detail-sticker" aria-hidden="true" />
       </figure>
 
-      <!-- Información -->
+      <!-- Information -->
       <div class="detail-info">
         <p class="detail-desc">
-          Café a base de espresso con leche y hielo. Cremoso, refrescante y perfecto para la tarde.
+          Espresso-based coffee with milk and ice. Creamy, refreshing, and perfect for the afternoon.
         </p>
 
         <div class="info-card">
-          <h3>Precios</h3>
+          <h3>Prices</h3>
           <div class="price-grid">
-            <div class="p-row"><span>Normal</span><strong>Q15.00</strong></div>
-            <div class="p-row"><span>Crema batida</span><strong>Q18.00</strong></div>
+            <div class="p-row"><span>Regular</span><strong>Q15.00</strong></div>
+            <div class="p-row"><span>With whipped cream</span><strong>Q18.00</strong></div>
           </div>
         </div>
 
         <div class="info-card">
-          <h3>Ingredientes</h3>
+          <h3>Ingredients</h3>
           <ul class="bullet">
-            <li>1–2 shots de espresso</li>
-            <li>Leche fría</li>
-            <li>Hielo</li>
-            <li>Azúcar o jarabe (opcional)</li>
-            <li>Crema batida (opcional)</li>
+            <li>1–2 shots of espresso</li>
+            <li>Cold milk</li>
+            <li>Ice</li>
+            <li>Sugar or syrup (optional)</li>
+            <li>Whipped cream (optional)</li>
           </ul>
         </div>
 
         <div class="info-card">
-          <h3>Receta</h3>
+          <h3>Recipe</h3>
           <ol class="steps">
-            <li>Llena un vaso con hielo.</li>
-            <li>Agrega el espresso recién preparado.</li>
-            <li>Endulza a tu gusto con azúcar o jarabe.</li>
-            <li>Completa con leche fría y mezcla suavemente.</li>
-            <li>Opcional: termina con crema batida.</li>
+            <li>Fill a glass with ice.</li>
+            <li>Add freshly brewed espresso.</li>
+            <li>Sweeten to taste with sugar or syrup.</li>
+            <li>Top with cold milk and stir gently.</li>
+            <li>Optional: finish with whipped cream.</li>
           </ol>
         </div>
 
         <div class="cta-actions">
-          <a class="btn neon" href="menu.html">Elegir otra bebida</a>
+          <a class="btn neon" href="menu.html">Choose another drink</a>
         </div>
       </div>
     </section>
