--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>B&P | Inicio</title>
+  <title>B&P | Home</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&family=Fredoka:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -17,7 +17,7 @@
       <h1 class="title">B&amp;P Drinks</h1>
       <p class="subtitle">Have fun when you drink!</p>
 
-      <a class="btn neon" href="menu.html" aria-label="Ver menú">Ver menú</a>
+      <a class="btn neon" href="menu.html" aria-label="Ver menú">View menu</a>
     </div>
   </main>
 </body>
