--- a/limonada.html
+++ b/limonada.html
@@ -1,65 +1,65 @@
 <!doctype html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>B&P | Limonada</title>
+  <title>B&P | Lemonade</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&family=Fredoka:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body class="detail limonada">
   <main class="detail-wrap">
-    <a class="back-link" href="menu.html">⟵ Volver al menú</a>
+    <a class="back-link" href="menu.html">⟵ Back to menu</a>
 
     <header class="detail-head">
-      <h1 class="detail-title">Limonada</h1>
-      <span class="detail-badge">Bebida fría</span>
+      <h1 class="detail-title">Lemonade</h1>
+      <span class="detail-badge">Cold beverage</span>
     </header>
 
     <section class="detail-grid">
-      <!-- Imagen grande + logo sobrepuesto -->
+      <!-- Large image + overlay logo -->
       <figure class="detail-figure">
-        <img src="assets/limonada.png" alt="Limonada" class="detail-img" />
+        <img src="assets/limonada.png" alt="Lemonade" class="detail-img" />
         <img src="assets/logo-limonada.png" alt="" class="detail-sticker" aria-hidden="true" />
       </figure>
 
-      <!-- Información -->
+      <!-- Information -->
       <div class="detail-info">
         <p class="detail-desc">
-          Clásica limonada casera, fresca y equilibrada entre ácido y dulce. Perfecta a cualquier hora.
+          Classic homemade lemonade, fresh and perfectly balanced between sweet and tart. Great at any time of day.
         </p>
 
         <div class="info-card">
-          <h3>Precios</h3>
+          <h3>Prices</h3>
           <div class="price-grid">
-            <div class="p-row"><span>Grande</span><strong>Q15.00</strong></div>
-            <div class="p-row"><span>Pequeña</span><strong>Q10.00</strong></div>
+            <div class="p-row"><span>Large</span><strong>Q15.00</strong></div>
+            <div class="p-row"><span>Small</span><strong>Q10.00</strong></div>
           </div>
         </div>
 
         <div class="info-card">
-          <h3>Ingredientes</h3>
+          <h3>Ingredients</h3>
           <ul class="bullet">
-            <li>Jugo de limón fresco</li>
-            <li>Agua fría</li>
-            <li>Azúcar o jarabe simple</li>
-            <li>Hielo</li>
-            <li>Rodajas de limón para decorar</li>
+            <li>Fresh lemon juice</li>
+            <li>Cold water</li>
+            <li>Sugar or simple syrup</li>
+            <li>Ice</li>
+            <li>Lemon slices for garnish</li>
           </ul>
         </div>
 
         <div class="info-card">
-          <h3>Receta</h3>
+          <h3>Recipe</h3>
           <ol class="steps">
-            <li>Disuelve el azúcar en un poco de agua tibia (jarabe simple) o usa azúcar directa.</li>
-            <li>Mezcla el jugo de limón con agua fría y endulza al gusto.</li>
-            <li>Sirve en vaso con bastante hielo.</li>
-            <li>Decora con rodajas de limón y, si quieres, hojas de menta.</li>
+            <li>Dissolve sugar in a bit of warm water (simple syrup) or use sugar directly.</li>
+            <li>Mix lemon juice with cold water and sweeten to taste.</li>
+            <li>Serve in a glass filled with plenty of ice.</li>
+            <li>Garnish with lemon slices and, if desired, mint leaves.</li>
           </ol>
         </div>
 
         <div class="cta-actions">
-          <a class="btn neon" href="menu.html">Elegir otra bebida</a>
+          <a class="btn neon" href="menu.html">Choose another drink</a>
         </div>
       </div>
     </section>
