--- a/rosaditos.html
+++ b/rosaditos.html
@@ -1,66 +1,66 @@
 <!doctype html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>B&P | Rosaditos</title>
+  <title>B&P | Pink Drink</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&family=Fredoka:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body class="detail rosaditos">
   <main class="detail-wrap">
-    <a class="back-link" href="menu.html">⟵ Volver al menú</a>
+    <a class="back-link" href="menu.html">⟵ Back to menu</a>
 
     <header class="detail-head">
-      <h1 class="detail-title">Rosaditos</h1>
-      <span class="detail-badge">Bebida fría</span>
+      <h1 class="detail-title">Pink Drink</h1>
+      <span class="detail-badge">Cold beverage</span>
     </header>
 
     <section class="detail-grid">
-      <!-- Imagen grande + logo sobrepuesto -->
+      <!-- Large image + overlay logo -->
       <figure class="detail-figure">
-        <img src="assets/rosaditos.png" alt="Rosaditos" class="detail-img" />
+        <img src="assets/rosaditos.png" alt="Pink Drink" class="detail-img" />
         <img src="assets/logo-rosadito.png" alt="" class="detail-sticker" aria-hidden="true" />
       </figure>
 
-      <!-- Información -->
+      <!-- Information -->
       <div class="detail-info">
         <p class="detail-desc">
-          Dulce y frutal con color rosado vibrante. Ideal para quienes prefieren sabores suaves.
+          Sweet and fruity with a vibrant pink color. Perfect for those who enjoy mild flavors.
         </p>
 
         <div class="info-card">
-          <h3>Precios</h3>
+          <h3>Prices</h3>
           <div class="price-grid">
-            <div class="p-row"><span>Normal</span><strong>Q12.00</strong></div>
-            <div class="p-row"><span>Con gomitas</span><strong>Q15.00</strong></div>
+            <div class="p-row"><span>Regular</span><strong>Q12.00</strong></div>
+            <div class="p-row"><span>With gummies</span><strong>Q15.00</strong></div>
           </div>
         </div>
 
         <div class="info-card">
-          <h3>Ingredientes</h3>
+          <h3>Ingredients</h3>
           <ul class="bullet">
-            <li>Hielo</li>
-            <li>Jarabe de fresa</li>
-            <li>Jugo de limón</li>
-            <li>Refresco lima-limón</li>
-            <li>Gomitas / chamoy (opcional)</li>
+            <li>Ice</li>
+            <li>Strawberry syrup</li>
+            <li>Lemon juice</li>
+            <li>Lime soda</li>
+            <li>Gummies / chamoy (optional)</li>
           </ul>
         </div>
 
         <div class="info-card">
-          <h3>Receta</h3>
+          <h3>Recipe</h3>
           <ol class="steps">
-            <li>Agrega hielo al vaso.</li>
-            <li>Vierte ~30 ml de jarabe de fresa.</li>
-            <li>Exprimir un toque de limón.</li>
-            <li>Completa con refresco y mezcla suave.</li>
-            <li>Decora con gomitas o borde con chamoy.</li>
+            <li>Add ice to the glass.</li>
+            <li>Pour about 30 ml of strawberry syrup.</li>
+            <li>Squeeze a touch of lemon juice.</li>
+            <li>Top with soda and stir gently.</li>
+            <li>Garnish with gummies or a chamoy rim.</li>
           </ol>
         </div>
 
         <div class="cta-actions">
-          <a class="btn neon" href="menu.html">Elegir otra bebida</a>
+          <a class="btn neon" href="menu.html">Choose another drink</a>
         </div>
       </div>
     </section>
