--- a/menu.html
+++ b/menu.html
@@ -3,75 +3,75 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>B&P | Bebidas</title>
+  <title>B&P | Drinks</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&family=Fredoka:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <main class="menu-poster" aria-label="Menú de bebidas">
+  <main class="menu-poster" aria-label="Drinks menu">
     <header class="menu-head">
-      <h1 class="menu-title">MENÚ</h1>
+      <h1 class="menu-title">MENU</h1>
     </header>
 
     <!-- Azulitos -->
-    <a class="menu-row pastel-blue" href="azulitos.html" aria-label="Ver Azulitos">
+    <a class="menu-row pastel-blue" href="azulitos.html" aria-label="View BLUE DRINK">
       <div class="menu-art">
-        <img src="assets/azulitos.png" alt="Azulitos" class="drink-img">
+        <img src="assets/azulitos.png" alt="BLUE DRINK" class="drink-img">
         <img src="assets/logo-azulito.png" alt="" class="overlay-sticker" aria-hidden="true">
       </div>
       <div class="menu-info">
-        <h2 class="drink-name">AZULITOS</h2>
-        <div class="price-line"><span>Normal</span><strong>Q12.00</strong></div>
-        <div class="price-line"><span>Con gomitas</span><strong>Q15.00</strong></div>
-        <span class="chip">Ver detalles</span>
+        <h2 class="drink-name">BLUE DRINK</h2>
+        <div class="price-line"><span>Regular</span><strong>Q12.00</strong></div>
+        <div class="price-line"><span>With gummies</span><strong>Q15.00</strong></div>
+        <span class="chip">View details</span>
       </div>
     </a>
 
     <hr class="dot-sep">
 
     <!-- Rosaditos (imagen a la derecha en desktop) -->
-    <a class="menu-row pastel-pink reverse" href="rosaditos.html" aria-label="Ver Rosaditos">
+    <a class="menu-row pastel-pink reverse" href="rosaditos.html" aria-label="View Pink Drink">
       <div class="menu-art">
-        <img src="assets/rosaditos.png" alt="Rosaditos" class="drink-img">
+        <img src="assets/rosaditos.png" alt="Pink Drink" class="drink-img">
         <img src="assets/logo-rosadito.png" alt="" class="overlay-sticker" aria-hidden="true">
       </div>
       <div class="menu-info">
-        <h2 class="drink-name">ROSADITOS</h2>
-        <div class="price-line"><span>Normal</span><strong>Q12.00</strong></div>
-        <div class="price-line"><span>Con gomitas</span><strong>Q15.00</strong></div>
-        <span class="chip">Ver detalles</span>
+        <h2 class="drink-name">PINK DRINK</h2>
+        <div class="price-line"><span>Regular</span><strong>Q12.00</strong></div>
+        <div class="price-line"><span>With gummies</span><strong>Q15.00</strong></div>
+        <span class="chip">View details</span>
       </div>
     </a>
 
     <hr class="dot-sep">
 
     <!-- Limonada -->
-    <a class="menu-row pastel-green" href="limonada.html" aria-label="Ver Limonada">
+    <a class="menu-row pastel-green" href="limonada.html" aria-label="View Lemonade">
       <div class="menu-art">
-        <img src="assets/limonada.png" alt="Limonada" class="drink-img">
+        <img src="assets/limonada.png" alt="Lemonade" class="drink-img">
         <img src="assets/logo-limonada.png" alt="" class="overlay-sticker" aria-hidden="true">
       </div>
       <div class="menu-info">
-        <h2 class="drink-name">LIMONADA</h2>
-        <div class="price-line"><span>Grande</span><strong>Q15.00</strong></div>
-        <div class="price-line"><span>Pequeña</span><strong>Q10.00</strong></div>
-        <span class="chip">Ver detalles</span>
+        <h2 class="drink-name">LEMONADE</h2>
+        <div class="price-line"><span>Large</span><strong>Q15.00</strong></div>
+        <div class="price-line"><span>Small</span><strong>Q10.00</strong></div>
+        <span class="chip">View details</span>
       </div>
     </a>
 
     <hr class="dot-sep">
 
     <!-- Café frío (imagen a la derecha en desktop) -->
-    <a class="menu-row pastel-brown reverse" href="cafe_frio.html" aria-label="Ver Café frío">
+    <a class="menu-row pastel-brown reverse" href="cafe_frio.html" aria-label="view Iced Coffee">
       <div class="menu-art">
         <img src="assets/cafe-frio.png" alt="Café frío" class="drink-img">
         <img src="assets/logo-cafe.png" alt="" class="overlay-sticker" aria-hidden="true">
       </div>
       <div class="menu-info">
-        <h2 class="drink-name">CAFÉ FRÍO</h2>
-        <div class="price-line"><span>Normal</span><strong>Q15.00</strong></div>
-        <div class="price-line"><span>Crema batida</span><strong>Q18.00</strong></div>
-        <span class="chip">Ver detalles</span>
+        <h2 class="drink-name">ICED COFFEE</h2>
+        <div class="price-line"><span>Regular</span><strong>Q15.00</strong></div>
+        <div class="price-line"><span>Whipped cream</span><strong>Q18.00</strong></div>
+        <span class="chip">View details</span>
       </div>
     </a>
   </main>
